# rust_practice

./: Cargo.toml  README.md  main.tf  run.zsh  table_1.csv  table_2.csv
src/: hashmap.rs  input.rs  integer_input.rs  main.rs  structs.rs  tables.rs  text_io_ex.rs  vectors.rs
src/files/: AST.txt  csv.rs  csv_fn.rs  fold.rs  fs.rs  joins.rs  mod.rs  routes.rs  sql.rs
src/services/: dynamodb.rs  mod.rs  s3.rs
terraform/: demo.py
terraform/iam/: lambda-iam.tf
