[package]
name = "rust_practice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
csv = "1.1" 
serde = { version = "1.0", features = ["derive"] }
sqlparser = "0.13.0"
meval = "0.2"
strum = "0.23.0"
strum_macros="0.23.1"