[package]
name = "rust_practice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1",features=["full"]}
tokio-stream="0.1"
mime_guess="2"
aws-config="0.12.0"
aws-sdk-s3="0.12.0"
aws-sdk-dynamodb="0.12.0"
anyhow="1.0"
lambda-runtime="*"
serde="^1"
serde_json="^1"
serde_derive="^1"
log="0.4"
simple_logger="2.1.0"
uuid={version="1.0.0",features=["v4"]}